<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/main"
    android:background="#FFFFFF">

    <!-- Header-->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/txtCreateNewCardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_payment_method_card"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <!-- ScrollView cho phần còn lại -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Swipe thẻ -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_gravity="center_horizontal">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerCards"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:overScrollMode="never" />
            </FrameLayout>

            <!-- Dots indicator -->
            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:dotsColor="@android:color/darker_gray"
                app:selectedDotColor="@color/black"
                app:dotsSize="6dp" />

            <!-- Form nhập thẻ -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_create_new_card_name_on_card_hint"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_field_bg"
                android:padding="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_create_new_card_card_number_hint"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_field_bg"
                android:padding="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:weightSum="2">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_create_new_card_exp_month_hint"
                    android:background="@drawable/input_field_bg"
                    android:padding="12dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/title_create_new_card_exp_year_hint"
                    android:background="@drawable/input_field_bg"
                    android:padding="12dp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_create_new_card_cvv_hint"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_field_bg"
                android:padding="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateNewCardAddCard"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="70dp"
                android:text="@string/title_button_create_new_card_add_card"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="15sp"
                app:backgroundTint="#867B4A"
                app:cornerRadius="100dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
