<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/main"
    android:background="@android:color/white"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Back Arrow -->
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Title -->

        <!-- Subtitle -->

        <TextView
            android:id="@+id/txtCreatePasswordTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title_create_new_password"
            android:textColor="#1E1E1E"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBack" />

        <TextView
            android:id="@+id/tvSubtitleCreateNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_subtitle_create_new_password"
            android:textColor="#8391A1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCreatePasswordTitle" />

        <!-- New Password -->
        <EditText
            android:id="@+id/edtCreateNewPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="43dp"
            android:background="@drawable/input_field_bg"
            android:hint="@string/title_new_password_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#000000"
            android:textColorHint="#AFAFAF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitleCreateNewPassword" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_field_bg"
            android:hint="@string/title_confirm_password_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#000000"
            android:textColorHint="#AFAFAF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtCreateNewPassword" />

        <!-- Reset Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="43dp"
            android:text="@string/title_reset_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="do_reset_password"
            app:backgroundTint="#89784B"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
