<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:padding="20dp"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Back arrow -->
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:src="@mipmap/ic_back" />

        <!-- Success icon -->
        <ImageView
            android:id="@+id/imgSuccess"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@mipmap/ic_success" />

        <!-- Title -->
        <TextView
            android:id="@+id/txtPasswordChangedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_password_changed"
            android:textColor="#1E1E1E"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/txtPasswordChangedSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_password_changed_notification"
            android:textAlignment="center"
            android:textColor="#8391A1"
            android:textSize="16sp" />

        <!-- Back to Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPasswordChangedBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="43dp"
            android:text="@string/title_button_back_login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="do_back_to_login"
            app:cornerRadius="100dp"
            app:backgroundTint="#89784B" />
    </LinearLayout>
</ScrollView>
